Minor UI Fix: Game details and image overlapping slightly.

--- a/frontend/essGames/src/App.css
+++ b/frontend/essGames/src/App.css
@@ -608,9 +608,12 @@ background-image: linear-gradient(315deg, #2d3436 0%, #181616 74%);
 }
 
 .poster_and_details_container{
-  display: flex;
-}
+display: flex;
+  }
 
+  .game_details_container{
+    margin-left: 2rem;
+  }
 .add_game_menu{
   color: var(--text-1);
 }
